samples/_failures_safe/1761487368_d607f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3584745f.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_3584745f.c:155:12: error: missing terminating " character
  155 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_3584745f.c:155:5: error: expected expression at end of input
  155 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_3584745f.c:155:5: error: expected declaration or statement at end of input
